Change opacity (alpha) of the 'details' UI View to 0.80.

--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" id="M7B-Rj-mzV">
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" id="M7B-Rj-mzV">
                                 <rect key="frame" x="0.0" y="321" width="320" height="247"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
