--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -104,7 +104,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="PME-Os-LHr"/>
                     <connections>
+                        <outlet property="overviewLabel" destination="Dbd-VN-bxP" id="rPd-if-KRW"/>
                         <outlet property="posterImageView" destination="ivb-g0-Ey7" id="5ob-Pe-OMT"/>
+                        <outlet property="titleLabel" destination="8iT-bA-cmN" id="6In-QU-YJm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z6b-lG-uA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
