--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Tz0-gK-uf8">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2PO-Yq-0IS" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MoviesNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="2PO-Yq-0IS" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="HXj-tM-o7a">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
